<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="superplayer_app_name">超级播放器</string>
    <string name="superplayer_cache_name">离线缓存</string>

    <string name="superplayer_cancel">取消</string>
    <string name="superplayer_ok">确定</string>

    <string name="superplayer_vod_ffplay">ffplay</string>
    <string name="superplayer_vod_exo">exo</string>
    <string name="superplayer_scancode_tip">二维码播放地址错误，请检查！</string>
    <string name="superplayer_small_video_special_effects_editing">小视频-特效剪辑</string>
    <string name="superplayer_set_appid_fileid">请设置AppID，FileID 和 PSign</string>
    <string name="superplayer_set_play_url">请设置播放地址</string>
    <string name="superplayer_input_correct_appid">请输入正确的AppId</string>
    <string name="superplayer_input_correct_fileid">请输入正确的FileId</string>
    <string name="superplayer_input_correct_play_url">请输入正确的播放地址</string>
    <string name="superplayer_request_fail">fileid请求失败</string>
    <string name="superplayer_definition_super">超清</string>
    <string name="superplayer_definition_high">高清</string>
    <string name="superplayer_definition_standard">标清</string>
    <string name="superplayer_test_video">测试视频</string>
    <string name="superplayer_flv_live_video">FLV直播</string>
    <string name="superplayer_rtmp_live_video">RTMP直播</string>
    <string name="superplayer_webrtc_live_video">WebRTC直播</string>
    <string name="superplayer_hls_live_video">HLS直播</string>
    <string name="superplayer_fetch_upload_list_video_fail">获取已上传的视频列表失败</string>
    <string name="superplayer_speed_rate">速率</string>
    <string name="superplayer_please_scan_qrcode"> 请输入或扫二维码获取播放地址</string>
    <string name="superplayer_back">返回</string>
    <string name="superplayer_resolution_normal">原画</string>
    <string name="superplayer_resolution_low">流畅</string>
    <string name="superplayer_open_hardware_speedup">已开启硬件解码加速，切换会重启播放流程!</string>
    <string name="superplayer_close_hardware_speedup">已关闭硬件解码加速，切换会重启播放流程!</string>
    <string name="superplayer_not_play_url">无播放地址</string>
    <string name="superplayer_vip_title">试看功能演示</string>
    <string name="superplayer_vip_watch_tip">可试看%ss，开通VIP观看完整视频</string>
    <string name="superplayer_cover_video_name">自定义封面演示</string>
    <string name="app_feed_title">Feed流播放</string>
    <string name="app_feed_detail_title">视频详情</string>
    <string name="superplayer_dynamic_watermark_title">动态水印演示</string>
    <string name="superplayer_dynamic_watermark_tip">shipinyun</string>
    <string name="superplayer_cover_title">自定义封面演示</string>
    <string name="superplayer_offline_cache_title">离线缓存（全屏）演示</string>
    <string name="superplayer_carousel_list_title">视频列表轮播演示</string>

    <string name="superplayer_cache_progress">缓存进度：%1$d%%</string>
    <string name="superplayer_cache_video_size">MB</string>
    <string name="superplayer_cache_state_cacheing">缓存中</string>
    <string name="superplayer_cache_state_pause">缓存暂停</string>
    <string name="superplayer_cache_state_error">缓存错误</string>
    <string name="superplayer_cache_state_finish">缓存结束</string>

    <string name="superplayer_hint">提示</string>
    <string name="superplayer_delete_video_confirm">确定删除视频吗</string>
    <string name="superplayer_delete_success">删除成功</string>
    <string name="superplayer_delete_failed">删除失败</string>
    <string name="superplayer_cahche_empty">暂无数据</string>
    <string name="superplayer_net_error">网络异常，请稍后重试</string>
    <string name="superplayer_live_list">直播列表</string>
    <string name="superplayer_vod_list">点播列表</string>

    <string name="vod_player">点播播放器</string>
    <string name="short_video_i_know">我知道了</string>
    <string name="super_player_up_and_down_bright">上下滑动调节屏幕明暗</string>
    <string name="super_player_left_and_right">左右滑动快进/倒退</string>
    <string name="super_player_up_and_down_volumn">上下滑动调节音量大小</string>
    <string name="super_player_move_left_to_see_before">向左拖动可观看先前直播内容</string>
    <string name="super_player_cache_video_title">不只是音视频 %1d</string>
    <string name="super_player_tv_screen_auto">自适应</string>
    <string name="super_player_tv_vod_self">点播自适应</string>
    <string name="super_player_tv_live_self">直播自适应</string>
    <string name="super_player_multi_subtitle_video">多字幕视频</string>
    <string name="super_player_multi_sound_track_video">多音轨视频</string>
    <string name="super_player_save_succeed">保存配置成功！</string>
    <string name="super_player_reset_succeed">重置配置成功！</string>
    <string name="tuiplayer_alpha_player">Alpha播放器</string>
    <string name="tuiplayer_input_local_video_path">请输入本地视频地址</string>
    <string name="tuiplayer_call_resolution_list">画质</string>
    <string name="tuiplayer_call_function">功能</string>
    <string name="tuiplayer_call_landscape">全屏</string>
    <string name="tuiplayer_resolution_global">global</string>
    <string name="tuiplayer_range_hint">0&#8211;1代表从0到1,用逗号分割数字代表按角标删除，如:1,2,3</string>
    <string name="tuiplayer_tui_menu">TUI菜单</string>
    <string name="tuiplayer_tui_data_control">数据操作</string>
    <string name="tuiplayer_tui_data_remove">移除</string>
    <string name="tuiplayer_tui_data_insert">插入</string>
    <string name="tuiplayer_tui_data_replace">替换</string>
    <string name="tuiplayer_tui_strategy_control">配置修改</string>
    <string name="tuiplayer_tui_resume_model">续播模式</string>
    <string name="tuiplayer_tui_loop_model">循环模式</string>
    <string name="tuiplayer_tui_render_mode">渲染模式</string>
    <string name="tuiplayer_tui_sr_mode">超分模式(Vod)</string>
    <string name="tuiplayer_tui_an_mode">音量均衡(Vod)</string>
    <string name="tuiplayer_tui_render_rotation">渲染角度</string>
    <string name="tuiplayer_tui_mirror">镜像(Vod)</string>
    <string name="tuiplayer_tui_mute">静音</string>
    <string name="tuiplayer_tui_click_enter_live">点击进入直播间</string>
    <string name="tuiplayer_tui_img_display">图片展示</string>
    <string name="tuiplayer_tui_img_display_desc">这是一个展示图片的自定义页面</string>

    <string name="short_video_play_back">短视频播放</string>
    <string name="short_video_live_title">直播间页面</string>
    <string name="short_video_get_data_failed">数据请求失败</string>
    <string name="short_video_view_more_videos">上下查看更多视频</string>
    <string name="short_video_pause_video">点击可暂停视频播放</string>
    <string name="short_video_go_to_list">左滑进入视频列表</string>
    <string name="short_video_move_seeek">拖拽进度条快速查看视频</string>


    <string-array name="tuiplayer_resume_mode_array">
        <item>NONE</item>
        <item>RESUME_CURRENT</item>
        <item>RESUME_PLAYED</item>
    </string-array>

    <string-array name="tuiplayer_loop_mode_array">
        <item>MODE_ONE_LOOP</item>
        <item>MODE_LIST_LOOP</item>
        <item>MODE_NO_LOOP</item>
    </string-array>

    <string-array name="tuiplayer_render_mode_array">
        <item>adjustResolution</item>
        <item>fillView</item>
    </string-array>

    <string-array name="tuiplayer_sr_mode_array">
        <item>none</item>
        <item>ASR</item>
    </string-array>

    <string-array name="tuiplayer_an_array">
        <item>off</item>
        <item>low</item>
        <item>standard</item>
        <item>high</item>
    </string-array>

    <string-array name="tuiplayer_render_rotation_array">
        <item>0</item>
        <item>90</item>
        <item>180</item>
        <item>270</item>
    </string-array>
    
    <string name="tui_short_video_render_view">tuiShortVideoRenderView</string>
</resources>
