<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:paddingBottom="20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_content_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_config_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/tuiplayer_tui_menu"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_config_data_control"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:text="@string/tuiplayer_tui_data_control"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintTop_toBottomOf="@id/tv_config_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_config_range_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textSize="13sp"
            android:textColor="@color/black"
            android:text="@string/tuiplayer_range_hint"
            app:layout_constraintHorizontal_bias="0"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            app:layout_constraintTop_toBottomOf="@id/tv_config_data_control"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
            android:id="@+id/et_range"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:textSize="14sp"
            android:inputType="text|number"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintTop_toBottomOf="@id/tv_config_range_tip"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <Button
            android:id="@+id/btn_data_remove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/tuiplayer_tui_data_remove"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintTop_toBottomOf="@id/et_range"
            app:layout_constraintEnd_toStartOf="@+id/btn_data_insert"
            app:layout_constraintStart_toStartOf="parent"/>

        <Button
            android:id="@id/btn_data_insert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tuiplayer_tui_data_insert"
            app:layout_constraintEnd_toStartOf="@+id/btn_data_replace"
            app:layout_constraintTop_toTopOf="@id/btn_data_remove"
            app:layout_constraintBottom_toBottomOf="@id/btn_data_remove"
            app:layout_constraintStart_toEndOf="@id/btn_data_remove"/>

        <Button
            android:id="@id/btn_data_replace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@string/tuiplayer_tui_data_replace"
            app:layout_constraintTop_toTopOf="@id/btn_data_insert"
            app:layout_constraintBottom_toBottomOf="@id/btn_data_insert"
            app:layout_constraintStart_toEndOf="@id/btn_data_insert"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_config_strategy_control"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:text="@string/tuiplayer_tui_strategy_control"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintTop_toBottomOf="@id/btn_data_remove"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_config_resume_model_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            app:layout_constraintTop_toBottomOf="@id/tv_config_strategy_control"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/tuiplayer_tui_resume_model"/>

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/acsp_resume_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintHorizontal_bias="0"
            android:layout_marginEnd="20dp"
            app:layout_constraintTop_toTopOf="@id/tv_config_resume_model_label"
            app:layout_constraintBottom_toBottomOf="@id/tv_config_resume_model_label"
            app:layout_constraintStart_toEndOf="@id/tv_config_resume_model_label"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_config_loop_model_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            app:layout_constraintTop_toBottomOf="@id/tv_config_resume_model_label"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/tuiplayer_tui_loop_model"/>

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/acsp_loop_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintHorizontal_bias="0"
            android:layout_marginEnd="20dp"
            app:layout_constraintTop_toTopOf="@id/tv_config_loop_model_label"
            app:layout_constraintBottom_toBottomOf="@id/tv_config_loop_model_label"
            app:layout_constraintStart_toEndOf="@id/tv_config_loop_model_label"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btn_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/superplayer_ok"
        app:layout_constraintTop_toBottomOf="@id/cl_content_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>